octoprint_bedcalibrationsuite/static/css/bedcalibrationsuite.css
div#bedlevelvisualizergraph div.modebar {
	left: 50%;
	transform: translateX(-50%);
}

div#bedlevelvisualizergraph {
	min-height: 450px;
}

#bedlevelvisualizer_webcam_container{
	width:100%;
	overflow: hidden;
	position:relative;
	outline:0;
	background-color:#000;
	margin-bottom: 10px;
}
#bedlevelvisualizer_webcam_container .webcam_rotated{
	position:relative;
	width:100%;
	padding-bottom:100%;
	pointer-events:none;
}
#bedlevelvisualizer_webcam_container .webcam_rotated .webcam_fixed_ratio{
	position:absolute;
	transform:rotate(-90deg);
	top:0;
	bottom:0;
	pointer-events:none;
}
#bedlevelvisualizer_webcam_container .webcam_rotated .webcam_fixed_ratio .webcam_fixed_ratio_inner{
	width:100%;
	height:100%;
	pointer-events:none;
}
#bedlevelvisualizer_webcam_container .webcam_unrotated .webcam_fixed_ratio{
	width:100%;
	pointer-events:none;
	padding-bottom:100%;
	position:relative;
}
#bedlevelvisualizer_webcam_container .webcam_unrotated .webcam_fixed_ratio.ratio43{
	padding-bottom:75%;
}
#bedlevelvisualizer_webcam_container .webcam_unrotated .webcam_fixed_ratio.ratio169{
	padding-bottom:56.25%;
}
#bedlevelvisualizer_webcam_container .webcam_unrotated .webcam_fixed_ratio.ratio1610{
	padding-bottom:62.5%;
}
#bedlevelvisualizer_webcam_container .webcam_unrotated .webcam_fixed_ratio .webcam_fixed_ratio_inner{
	position:absolute;
	top:0;
	bottom:0;
	left:0;
	right:0;
	pointer-events:none;
}
#bedlevelvisualizer_webcam_container img{
	width:100%;
	height:100%;
	object-fit:contain;
}
/*#tab_plugin_bedlevelvisualizer.fullscreen{
    z-index: 9999;
    width: 100%;
    height: 100%;
    position: fixed;
    top: 0;
    left: 0;
 }*/

.table thead tr.info > th, .table tbody tr td.info, .table tfoot tr.info > th {
    background-color: #d9edf7;
}

.table thead tr.info th.text-right, .table tbody tr td.text-right, .table tfoot tr.info th.text-right {
	text-align: right;
}

.table tr.info th.text-center, .table tbody td.text-center {
	text-align: center;
	vertical-align: middle;
}

.table thead tr.info .raise, .table tbody tr .raise, .table tfoot tr.info .raise, .table tfoot tr td div span.raise {
    color: blue;
}

.table thead tr.info .lower, .table tbody tr .lower, .table tfoot tr.info .lower, .table tfoot tr td div span.lower {
    color: red;
}

div.raise > div.turn_circle {
    background-color: blue;
}

div.lower > div.turn_circle {
    background-color: red;
}

.table thead tr.info .x-axis-label, .table tbody tr .x-axis-label, .table tfoot tr.info .x-axis-label, .table tfoot tr .y-axis-label {
    color: black;
}

.table thead tr.info .y-axis-label, .table tbody tr .y-axis-label, .table tfoot tr.info .y-axis-label, .table tfoot tr .x-axis-label {
    color: green;
}

